--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,1 +1,17 @@
-#Please complete this file
+db:
+  image: "mysql:5.6"
+  environment:
+     MYSQL_DB_HOST: localhost
+     MYSQL_DB_DATABASE: homestead
+     MYSQL_DB_USERNAME: homestead
+     MYSQL_DB_PASSWORD: secret
+
+web:
+  build: .
+  ports: 
+    - "8081:80"
+  volumes:
+    - ./worldapi:/opt/www/worldapi
+  links:
+    - db:mysql
+  
